local-deployment/book-ms-api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: book-ms-api-svc
spec:
  selector:
    app: book-ms-api
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  type: ClusterIP
