local-deployment/book-ms-client-service.yml
apiVersion: v1
kind: Service
metadata:
  name: book-ms-client-svc
spec:
  selector:
    app: book-ms-client
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
